# llm-util

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PRESETS.md  QUICKSTART.md  README.md
examples/: advanced_filtering.rs  basic.rs  custom_config.rs  dry_run.rs  multiple_formats.rs  preset_pipeline.rs  preset_usage.rs  simple_preset.rs  test_example.rs
src/: api.rs  config.rs  error.rs  file.rs  filter.rs  lib.rs  main.rs  pipeline.rs  preset.rs  scanner.rs  splitter.rs  template.rs  template_validator.rs  token.rs  writer.rs
templates/: json.tera  markdown.tera  preset_json.tera  preset_markdown.tera  preset_xml.tera  xml.tera
