[package]
name = "llm-utl"
version = "0.1.1"
edition = "2024"
authors = ["Maxim Bogovic <bogovick@gmail.com>"]
description = "Convert code repositories into LLM-friendly prompts with smart chunking and filtering"
license = "MIT"
repository = "https://github.com/maxBogovick/llm-util"
homepage = "https://github.com/maxBogovick/llm-util"
documentation = "https://github.com/maxBogovick/llm-util/blob/master/README.md"
readme = "README.md"
keywords = ["llm", "ai", "prompt", "code-analysis", "tokenizer"]
categories = ["command-line-utilities", "development-tools", "text-processing"]
exclude = [
    "out/",
    ".idea/",
]
rust-version = "1.85.0"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "env", "cargo"] }
globset = "0.4.18"
once_cell = "1.21.3"

# File system
ignore = "0.4"
walkdir = "2.5"
pathdiff = "0.2"

# Templates
tera = "1.20"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Utilities
chrono = { version = "0.4", default-features = false, features = ["clock"] }

# Async runtime (для будущих улучшений)
tokio = { version = "1.37", features = ["fs", "rt-multi-thread"], optional = true }
num_cpus = "1.17.0"
memchr = "2.7.6"

[dev-dependencies]
assert_fs = "1.1"

[features]
default = []
async = ["tokio"]

[[bin]]
name = "llm-utl-lib"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev.package."*"]
opt-level = 3
